// ------------------------------------------------------------
//  Copyright (c) Microsoft Corporation.  All rights reserved.
//  Licensed under the MIT License (MIT). See License.txt in the repo root for license information.
// ------------------------------------------------------------

// This is the data model for Prometheus metrics using proto3.
// The original definition can be found at here: https://github.com/prometheus/client_model/blob/master/metrics.proto
// However, the original definition is using proto2, we have to convert it to proto3 so it can be compile into C# classes.


syntax = "proto3";

package io.prometheus.client;

message LabelPair {
  string name  = 1;
  string value = 2;
}

enum MetricType {
  COUNTER    = 0;
  GAUGE      = 1;
  SUMMARY    = 2;
  UNTYPED    = 3;
  HISTOGRAM  = 4;
}

message Gauge {
  double value = 1;
}

message Counter {
  double value = 1;
}

message Quantile {
  double quantile = 1;
  double value    = 2;
}

message Summary {
  uint64   sample_count = 1;
  double   sample_sum   = 2;
  repeated Quantile quantile = 3;
}

message Untyped {
  double value = 1;
}

message Histogram {
  uint64 sample_count = 1;
  double sample_sum   = 2;
  repeated Bucket bucket = 3; // Ordered in increasing order of upper_bound, +Inf bucket is .
}

message Bucket {
  uint64 cumulative_count = 1; // Cumulative in increasing order.
  double upper_bound = 2;      // Inclusive.
}

message Metric {
  repeated LabelPair label        = 1;
  Gauge     gauge        = 2;
  Counter   counter      = 3;
  Summary   summary      = 4;
  Untyped   untyped      = 5;
  Histogram histogram    = 7;
  int64     timestamp_ms = 6;
}

message MetricFamily {
  string     name   = 1;
  string     help   = 2;
  MetricType type   = 3;
  repeated Metric     metric = 4;
}